--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,17 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  cloud_firestore: ^4.4.3
+  flutter_pdfview: ^1.3.2
+  item_count_number_button: ^1.9.2
+  cloud_firestore: ^4.8.4
+  path_provider: ^2.1.3
+  url_launcher: ^6.1.14
   cupertino_icons: ^1.0.2
-  firebase_auth: ^4.2.9
-  firebase_core: ^2.7.0
-  firebase_storage: ^11.0.14
+  firebase_auth: ^4.7.2
+  firebase_core: ^2.15.0
+  firebase_storage: ^11.2.5
+  pin_code_fields: ^7.4.0
+  universal_html: ^2.2.1
   flutter:
     sdk: flutter
   fluttertoast: ^8.2.1
@@ -33,10 +39,19 @@ dependencies:
   pinput: ^2.2.16
   shared_preferences: ^2.0.15
   image_picker: ^0.8.6
+  firebase_app_check: ^0.1.1+13
+  google_api_availability: ^4.0.0
+  loading_animation_widget: ^1.2.0+4
+  get: ^4.6.5
+  mailer: ^6.0.1
+  firebase_messaging: ^14.6.5
+  firebase_analytics: ^10.4.4
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,22 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
-    - assets/icmr.png
-    - assets/clg.png
-    - assets/jssstu.png
-    - assets/drug.png
-    - assets/path.png
-    - assets/pre.png
-    - assets/syn.png
-    - assets/tab.png
-    - assets/hiv.png
-    - assets/organsystem.jpg
-    - assets/surprop.png
-    - assets/transplant.png
-    - assets/drugres.png
-    - assets/info.png
-    - assets/account.png
+    - assets/sample.pdf
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
